--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,7 @@
 .page{
   min-height: 100vh;
   width: 100%;
-  background-color: red;
+  /* background-color: red; */
 }
 
 .nav{
@@ -9,8 +9,9 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  padding: 20px 50px;
   background-color: #1d1d1d;
+  overflow: hidden;
+  width: 70px;
 }
 
 .nav ul{
@@ -19,6 +20,7 @@
   gap: 2rem;
   list-style: none;
   color: white;
+  display: none;
 }
 
 .header{
@@ -78,4 +80,57 @@
   cursor: pointer;
   margin-top: 20px;
   border-radius: 10px;
+}
+
+.sectionUs{
+  width: 100%;
+  height: fit-content;
+  background-color: #212121;
+
+  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23141414' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");  position: relative;
+}
+
+.sectionUs header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 40px;
+}
+
+.sectionUs header div{
+  display: flex;
+  flex-direction: column;
+}
+
+.sectionUs .usImage{
+  object-fit: cover;
+  width: 80%;
+  padding: 40px;
+}
+
+.sectionUs h1{
+  color: rgb(226, 226, 226);
+  font-size: 3rem;
+  text-align: center;
+  padding-top: 3rem;
+}
+
+.sectionUs p{
+  color: rgb(145, 145, 145);
+  font-size: 1.5rem;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.footer{
+  width: 100%;
+  height: 200px;
+  background-color: #292929;
+  background-image: url("data:image/svg+xml,%3Csvg width='80' height='88' viewBox='0 0 80 88' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M22 21.91V26h-2c-9.94 0-18 8.06-18 18 0 9.943 8.058 18 18 18h2v4.09c8.012.722 14.785 5.738 18 12.73 3.212-6.99 9.983-12.008 18-12.73V62h2c9.94 0 18-8.06 18-18 0-9.943-8.058-18-18-18h-2v-4.09c-8.012-.722-14.785-5.738-18-12.73-3.212 6.99-9.983 12.008-18 12.73zM54 58v4.696c-5.574 1.316-10.455 4.428-14 8.69-3.545-4.262-8.426-7.374-14-8.69V58h-5.993C12.27 58 6 51.734 6 44c0-7.732 6.275-14 14.007-14H26v-4.696c5.574-1.316 10.455-4.428 14-8.69 3.545 4.262 8.426 7.374 14 8.69V30h5.993C67.73 30 74 36.266 74 44c0 7.732-6.275 14-14.007 14H54zM42 88c0-9.94 8.06-18 18-18h2v-4.09c8.016-.722 14.787-5.738 18-12.73v7.434c-3.545 4.262-8.426 7.374-14 8.69V74h-5.993C52.275 74 46 80.268 46 88h-4zm-4 0c0-9.943-8.058-18-18-18h-2v-4.09c-8.012-.722-14.785-5.738-18-12.73v7.434c3.545 4.262 8.426 7.374 14 8.69V74h5.993C27.73 74 34 80.266 34 88h4zm4-88c0 9.943 8.058 18 18 18h2v4.09c8.012.722 14.785 5.738 18 12.73v-7.434c-3.545-4.262-8.426-7.374-14-8.69V14h-5.993C52.27 14 46 7.734 46 0h-4zM0 34.82c3.213-6.992 9.984-12.008 18-12.73V18h2c9.94 0 18-8.06 18-18h-4c0 7.732-6.275 14-14.007 14H14v4.696c-5.574 1.316-10.455 4.428-14 8.69v7.433z' fill='%231a1a1a' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
 }
