avance en nav y colores

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,12 +6,11 @@
 
 .nav{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   flex-direction: column;
   background-color: #1d1d1d;
   overflow: hidden;
   width: 70px;
+  color: #f6f6f6;
 }
 
 .nav ul{
@@ -19,8 +18,21 @@
   flex-direction: column;
   gap: 2rem;
   list-style: none;
-  color: white;
-  display: none;
+  color: #f6f6f6;
+}
+
+.nav ul li{
+  padding: 10px 16px;
+}
+
+.nav ul li:hover{
+  background-color: #2d2d2d;
+  cursor: pointer;
+}
+
+.menuIcon{
+  width: 38px;
+  height: 38px;
 }
 
 .header{
@@ -65,21 +77,32 @@
 .header h2{
   position: relative;
   z-index: 2; /* Asegúrate de que el texto esté por encima del pseudo-elemento */
-  color: rgba(219, 219, 219, 0.849);
+  color: #f6f6f6;
   font-size: 2rem;
+  opacity: .8;
 }
 
-.header button{
+.header a{
   position: relative;
   z-index: 2; /* Asegúrate de que el texto esté por encima del pseudo-elemento */
   background-color: #F2A326;
-  color: white;
+  color: #f6f6f6;
   border: none;
   padding: 10px 20px;
   font-size: 1.2rem;
   cursor: pointer;
   margin-top: 20px;
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transition: all 0.2s;
+}
+
+.header button:hover{
+  transform: scale(1.1);
+}
+
+.header button:active{
+  background-color: #c48827;
 }
 
 .sectionUs{
@@ -116,7 +139,8 @@
 }
 
 .sectionUs p{
-  color: rgb(145, 145, 145);
+  color: #f6f6f6;
+  opacity: .7;
   font-size: 1.5rem;
   text-align: center;
   padding-top: 20px;
@@ -125,12 +149,12 @@
 .footer{
   width: 100%;
   height: 200px;
-  background-color: #292929;
-  background-image: url("data:image/svg+xml,%3Csvg width='80' height='88' viewBox='0 0 80 88' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M22 21.91V26h-2c-9.94 0-18 8.06-18 18 0 9.943 8.058 18 18 18h2v4.09c8.012.722 14.785 5.738 18 12.73 3.212-6.99 9.983-12.008 18-12.73V62h2c9.94 0 18-8.06 18-18 0-9.943-8.058-18-18-18h-2v-4.09c-8.012-.722-14.785-5.738-18-12.73-3.212 6.99-9.983 12.008-18 12.73zM54 58v4.696c-5.574 1.316-10.455 4.428-14 8.69-3.545-4.262-8.426-7.374-14-8.69V58h-5.993C12.27 58 6 51.734 6 44c0-7.732 6.275-14 14.007-14H26v-4.696c5.574-1.316 10.455-4.428 14-8.69 3.545 4.262 8.426 7.374 14 8.69V30h5.993C67.73 30 74 36.266 74 44c0 7.732-6.275 14-14.007 14H54zM42 88c0-9.94 8.06-18 18-18h2v-4.09c8.016-.722 14.787-5.738 18-12.73v7.434c-3.545 4.262-8.426 7.374-14 8.69V74h-5.993C52.275 74 46 80.268 46 88h-4zm-4 0c0-9.943-8.058-18-18-18h-2v-4.09c-8.012-.722-14.785-5.738-18-12.73v7.434c3.545 4.262 8.426 7.374 14 8.69V74h5.993C27.73 74 34 80.266 34 88h4zm4-88c0 9.943 8.058 18 18 18h2v4.09c8.012.722 14.785 5.738 18 12.73v-7.434c-3.545-4.262-8.426-7.374-14-8.69V14h-5.993C52.27 14 46 7.734 46 0h-4zM0 34.82c3.213-6.992 9.984-12.008 18-12.73V18h2c9.94 0 18-8.06 18-18h-4c0 7.732-6.275 14-14.007 14H14v4.696c-5.574 1.316-10.455 4.428-14 8.69v7.433z' fill='%231a1a1a' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+  background-color: #212121;
+  /* background-image: url("data:image/svg+xml,%3Csvg width='80' height='88' viewBox='0 0 80 88' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M22 21.91V26h-2c-9.94 0-18 8.06-18 18 0 9.943 8.058 18 18 18h2v4.09c8.012.722 14.785 5.738 18 12.73 3.212-6.99 9.983-12.008 18-12.73V62h2c9.94 0 18-8.06 18-18 0-9.943-8.058-18-18-18h-2v-4.09c-8.012-.722-14.785-5.738-18-12.73-3.212 6.99-9.983 12.008-18 12.73zM54 58v4.696c-5.574 1.316-10.455 4.428-14 8.69-3.545-4.262-8.426-7.374-14-8.69V58h-5.993C12.27 58 6 51.734 6 44c0-7.732 6.275-14 14.007-14H26v-4.696c5.574-1.316 10.455-4.428 14-8.69 3.545 4.262 8.426 7.374 14 8.69V30h5.993C67.73 30 74 36.266 74 44c0 7.732-6.275 14-14.007 14H54zM42 88c0-9.94 8.06-18 18-18h2v-4.09c8.016-.722 14.787-5.738 18-12.73v7.434c-3.545 4.262-8.426 7.374-14 8.69V74h-5.993C52.275 74 46 80.268 46 88h-4zm-4 0c0-9.943-8.058-18-18-18h-2v-4.09c-8.012-.722-14.785-5.738-18-12.73v7.434c3.545 4.262 8.426 7.374 14 8.69V74h5.993C27.73 74 34 80.266 34 88h4zm4-88c0 9.943 8.058 18 18 18h2v4.09c8.012.722 14.785 5.738 18 12.73v-7.434c-3.545-4.262-8.426-7.374-14-8.69V14h-5.993C52.27 14 46 7.734 46 0h-4zM0 34.82c3.213-6.992 9.984-12.008 18-12.73V18h2c9.94 0 18-8.06 18-18h-4c0 7.732-6.275 14-14.007 14H14v4.696c-5.574 1.316-10.455 4.428-14 8.69v7.433z' fill='%231a1a1a' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E"); */
 
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: white;
+  color: #f6f6f6;
 }
