--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,18 @@
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:  inherit;
+  overflow-x: hidden;
+  width: 100%;
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
-  display: flex;
 }
 
 a {
