--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -22,6 +22,7 @@
   top: 0;
   left: 0;
   z-index: 0;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .header::after{
@@ -119,23 +120,23 @@
   /* text-transform: uppercase; */
   letter-spacing: 2px;
   font-weight: 400;
-  position: relative;
-  z-index: 2;
-  color: #bea052;
+  color: #c3c3c3;
   font-family: 'Tangerine';
   font-size: 32px;
+  text-align: center;
 }
 
 .page .sectionUs{
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 300px);
   grid-template-areas: 
-  "info info"
-  "img1 img2";
+  "info info img1 img1"
+  "info info img1 img1";
   gap: 2rem;
   padding: 2rem;
-  min-height: 400px;
+  background: #212121;
+  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23141414' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");  position: relative;
 }
 
 .page .sectionUs div{
@@ -144,12 +145,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #444444c4;
   padding: 0 40px;
-  /* align-items: center; */
-  /* background-color: blue; */
-  /* text-align: center; */
-
+  /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ; */
 }
 
 .sectionUs .usImage,
@@ -157,6 +154,7 @@
   object-fit: cover; /* Ajusta las imágenes al espacio */
   width: 100%;
   height: 100%;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
 }
 
 .sectionUs .usImage{
@@ -173,6 +171,18 @@
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
+  position: relative;
+}
+
+.sectionUs h1::before{
+  content: '';
+  position: absolute;
+  bottom: -4px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50px;
+  height: 2px;
+  background-color: #c48827;
 }
 
 .sectionUs p{
