--- a/src/app/navBar.module.css
+++ b/src/app/navBar.module.css
@@ -11,6 +11,8 @@
   height: 100vh;
   transition: 0.4s ease;
   padding: 10px 0;
+  border-right: #363636 solid 1px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .nav ul{
@@ -21,21 +23,6 @@
   color: #f6f6f6;
   padding: 0 15px;
   gap: 4px;
-}
-
-.collapsed{
-  width: 88px;
-}
-
-.collapsed ul li span{
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
-}
-
-.collapsed .schedule{
-  /* opacity: 0; */
-  transition: opacity 0.2s ease;
 }
 
 .nav ul li{
@@ -79,11 +66,27 @@
   justify-content: center;
   padding: 0 10px;
   /* opacity: 1; */
+  transition: opacity 0.3s ease;
 }
 
 .schedule div{
   text-align: center;
 }
+
+.collapsed{
+  width: 88px;
+}
+
+.collapsed ul li span{
+  /* opacity: 0; */
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
+.collapsed .schedule{
+  opacity: 0;
+}
+
 
 .navLinks .iconNav{
   width: 24px;
@@ -118,6 +121,7 @@
     height: 70px;
     padding: 0 0;
     overflow: visible;
+    border: none;
   }
 
   .nav ul{
@@ -149,7 +153,7 @@
     align-items: center;
   }
 
-  .nav ul li{
+  .nav .navLinks li{
     border-radius: 0;
     padding: 0 0;
     width: 100%;
@@ -158,13 +162,14 @@
     align-items: center;
     border-top: #6e6e6e solid 1px;
     gap: 0;
+
   }
 
   .nav .iconNav{
     padding-top: 20px;
   }
 
-  .nav li span{
+  .nav .navLinks li span{
     text-align: center;
     font-weight: 700;
     font-size: 7px !important;
@@ -173,7 +178,7 @@
     margin-top: 5px;
     text-transform: uppercase;
     opacity: 1 !important;
-    white-space: normal;
+    white-space: normal !important;
     pointer-events: all;
   }
 
