--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -116,11 +116,11 @@
   min-height: 600px;
 }
 
-.page section h6{
+.page .sectionUs h6{
   /* text-transform: uppercase; */
   letter-spacing: 2px;
   font-weight: 400;
-  color: #c3c3c3;
+  color: #d4af37;
   font-family: 'Tangerine';
   font-size: 32px;
   text-align: center;
@@ -128,25 +128,25 @@
 
 .page .sectionUs{
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 300px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 300px auto;
+
   grid-template-areas: 
-  "info info img1 img1"
-  "info info img1 img1";
+  "head img1 img1 "
+  "txt0 txt1 txt2 ";
   gap: 2rem;
   padding: 2rem;
-  background: #212121;
-  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23141414' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");  position: relative;
 }
 
-.page .sectionUs div{
-  grid-area: info;
+.page .sectionUs header{
+  background: #212121;
+  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23141414' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  grid-area: head;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 40px;
-  /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ; */
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
 }
 
 .sectionUs .usImage,
@@ -161,9 +161,9 @@
   grid-area: img1;
 }
 
-.sectionUs .usImagee{
+/* .sectionUs .usImagee{
   grid-area: img2;
-}
+} */
 
 .sectionUs h1{
   color: rgb(226, 226, 226);
@@ -172,26 +172,67 @@
   text-transform: uppercase;
   text-align: center;
   position: relative;
+  line-height: 1.1;
 }
 
-.sectionUs h1::before{
+.sectionUs header span{
+  color: #c48827;
+  position: relative;
+}
+
+.sectionUs header span::before{
   content: '';
   position: absolute;
-  bottom: -4px;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 50%;
+  left: -70px;
+  transform: translateY(-50%);
   width: 50px;
   height: 2px;
   background-color: #c48827;
 }
 
-.sectionUs p{
-  color: #f6f6f6;
-  opacity: .8;
-  font-size: 16px;
-  padding-top: 10px;
+.sectionUs header span::after{
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: -70px;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 2px;
+  background-color: #c48827;
+}
+
+.sectionUs .card{
+  background: #212121;
+  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23141414' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  color: #e1e1e1;
+  font-size: clamp(1rem, 2vw, 1.1rem);
+  padding: 26px;
   text-align: center;
-  max-width: 800px;
+  position: relative;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
+  border-top: 2px solid #c48827;
+}
+
+.sectionUs .card::before{
+  content: '◆';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #c48827;
+}
+
+.sectionUs #c1{
+  grid-area: txt0;
+}
+
+.sectionUs #c2{
+  grid-area: txt1;
+}
+
+.sectionUs #c3{
+  grid-area: txt2;
 }
 
 .footer{
@@ -208,10 +249,33 @@
 }
 
 
+@media (max-width: 960px) {
+  .page .sectionUs{
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 300px repeat(3, minmax(130px, auto));
+    grid-template-areas: 
+    "head img1 img1"
+    "txt0 txt0 txt0"
+    "txt1 txt1 txt1"
+    "txt2 txt2 txt2";
+  }
+}
+
 @media (max-width: 768px) {
   .page {
     padding-left: 0;
     padding-bottom: 70px;
+  }
+
+  .page .sectionUs{
+    grid-template-columns: 1fr;
+    grid-template-rows: 250px calc(100vw*0.6 - 4rem) repeat(3, minmax(130px, auto));
+    grid-template-areas: 
+    "head"
+    "img1"
+    "txt0"
+    "txt1"
+    "txt2";
   }
 }
 
