--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,26 +3,41 @@
   min-width: 100% ;
   padding-left: 88px;
   /* background-color: red; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header{
   width: 100%;
+  max-width: 1980px;
   height: 600px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   position: relative;
+}
+
+.header .headerContent{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-
-.headerImage{
-  max-width: 100%;
-  object-fit: cover;
-  position: absolute; 
+  width: 100%;
+  height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
+.header .headerImagePC{
+  object-fit: cover;
+  /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
+}
+
+.header .headerImageMovile{
+  height: 600px;
+  width: 500px;
+  display: none;
 }
 
 .header::after{
@@ -36,16 +51,9 @@
   z-index: 1;
 }
 
-.header h1{
+.header .headerContent .headerTitle{
   position: relative;
-  z-index: 2; 
-  color: #F2A326;
-  font-size: 4.5rem;
-  text-align: center;
-}
-
-.header .headerTitle{
-  position: relative;
+  width: 94%;
   z-index: 2; 
   max-width: 600px;
   height: auto;
@@ -53,7 +61,7 @@
 }
 
 
-.header h2{
+.header .headerContent h2{
   position: relative;
   z-index: 2; 
   color: #f6f6f6d7;
@@ -64,7 +72,7 @@
   text-transform: uppercase;
 }
 
-.header h2::before{
+.header .headerContent h2::before{
   content: '';
   position: absolute;
   top: 50%;
@@ -73,10 +81,10 @@
   width: 100px;
   height: 2px;
   background-color: #f6f6f6d7;
-  z-index: -1;
+  z-index: 1;
 }
 
-.header h2::after{
+.header .headerContent h2::after{
   content: '';
   position: absolute;
   top: 50%;
@@ -84,11 +92,11 @@
   transform: translateY(-50%);
   width: 100px;
   height: 2px;
-  background-color: #f6f6f6d7;
-  z-index: -1;
+  background-color: #f6f6f6;
+  z-index: 1;
 }
 
-.header a{
+.header .headerContent a{
   position: relative;
   z-index: 2; 
   color: #e7e7e7;
@@ -103,21 +111,20 @@
   text-transform: uppercase;
 }
 
-.header a:hover{
+.header .headerContent a:hover{
   transform: scale(1.1);
 }
 
-.header a:active{
+.header .headerContent a:active{
   background-color: #c48827;
 }
 
 .page section{
   width: 100%;
-  min-height: 600px;
+  /* min-height: 600px; */
 }
 
 .page .sectionUs h6{
-  /* text-transform: uppercase; */
   letter-spacing: 2px;
   font-weight: 400;
   color: #d4af37;
@@ -127,6 +134,7 @@
 }
 
 .page .sectionUs{
+  max-width: 1980px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 300px auto;
@@ -206,12 +214,12 @@
   background: #212121;
   background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23141414' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   color: #e1e1e1;
-  font-size: clamp(1rem, 2vw, 1.1rem);
-  padding: 26px;
   text-align: center;
-  position: relative;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
   border-top: 2px solid #c48827;
+  position: relative;
+  font-size: clamp(1rem, 2vw, 1.1rem);
+  padding: 26px;
 }
 
 .sectionUs .card::before{
@@ -247,7 +255,6 @@
   flex-direction: column;
   color: #f6f6f6;
 }
-
 
 @media (max-width: 960px) {
   .page .sectionUs{
@@ -293,3 +300,12 @@
   }
 }
 
+@media (max-width: 500px) {
+  .header .headerImagePC{
+    display: none;
+  }
+
+  .header .headerImageMovile{
+    display: block;
+  }
+}
