--- a/src/app/components/wines/wines.module.css
+++ b/src/app/components/wines/wines.module.css
@@ -2,36 +2,37 @@
   width: calc(100% - 40px);
   min-height: 600px;
   display: grid;
-  grid-template-rows: 200px auto 1fr;
+  grid-template-columns: repeat(2, auto) ;
+  max-width: 1980px;
   gap: 20px;
+  padding: 0 2rem;
+  justify-content: center;
   /* background-color: #212121; */
 }
 
-.winesCarrousel{
-  grid-row: 3 / 4;
-}
-
-.headerWines{
-  grid-row: 1 / 2;
-}
-
-.card{
-  grid-row: 2 / 3;
+.sectionWines main{
+  grid-column: 1 / 2;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
+}
+
+.winesCarrousel{
+  grid-column: 2 / 3;
 }
 
 .card{
-  /* background-color: rgb(29, 29, 29); */
-  /* background-color: #333; */
-  /* padding: 20px; */
-  /* text-align: center;  */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
   color: #ccc;
   max-width: 500px;
-  justify-self: center;
+  text-align: center;
+  padding: 0 2rem;
+  margin-top: 1.8rem;
+  height: 100%;
+  font-size: clamp(.8rem, 1.75vw, 1rem);
 }
 
 .sectionWines .headerWines{
@@ -171,4 +172,20 @@
 
 .img.inactive {
   opacity: 0;
+}
+
+@media (max-width: 690px){
+  .sectionWines{
+    grid-template-columns: 1fr;
+  }  
+
+  .sectionWines main{
+    grid-column: initial;
+  }
+  
+  .winesCarrousel{
+    grid-column: initial;
+  }
+  
+
 }
