--- a/src/app/fonts.css
+++ b/src/app/fonts.css
@@ -4,6 +4,7 @@
   src: url('/fonts/Saira/Saira-VariableFont_wdth,wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -11,6 +12,7 @@
   src: url('/fonts/Saira/Saira-Italic-VariableFont_wdth,wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Tangerine */
@@ -19,6 +21,7 @@
   src: url('/fonts/Tangerine/Tangerine-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -26,4 +29,5 @@
   src: url('/fonts/Tangerine/Tangerine-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
