--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,10 +1,12 @@
 .page{
   min-height: 100%;
-  min-width: 100% ;
+  width: 100%;
+  max-width: 1980px;
   padding-left: 88px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-self: center;
 }
 
 .page section{
@@ -15,11 +17,23 @@
   width: 100%;
   height: 200px;
   background-color: #212121;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  color: #ccc;
+}
+
+.footer div{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: #f6f6f6;
+  width: 100%;
+}
+
+.footer .footerCredits{
+  margin-bottom: 20px;
+  font-size: .8rem;
+  text-align: center;
 }
 
 @media (max-width: 770px) {
