--- a/src/app/components/wines/wines.module.css
+++ b/src/app/components/wines/wines.module.css
@@ -32,7 +32,7 @@
   padding: 0 2rem;
   margin-top: 1.8rem;
   height: 100%;
-  font-size: clamp(.8rem, 1.75dvw, 1rem); 
+  font-size: clamp(.8rem, 1.75vw, 1rem); 
 }
 
 .sectionWines .headerWines{
